--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.html
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.html
@@ -9,8 +9,7 @@
                         [icon]="faSquarePen"
                         data-bs-toggle="modal" 
                         data-bs-target="#contacto-modal-titulo">
-                </fa-icon>
-                
+                </fa-icon>                
                 <fa-icon
                     style="font-size: 2.3em"
                     *ngIf="modoEdicion"
@@ -19,8 +18,7 @@
                     data-bs-toggle="modal" 
                     data-bs-target="#contacto-modal-info">
                 </fa-icon>  
-            </div>                             
-                     
+            </div>          
         </div>
         <div class="mt-4 d-flex" id="container-form-info" data-aos="zoom-in" data-aos-duration="800" data-aos-easing="ease-in-out" >
             <div id="container-form">                
@@ -51,8 +49,7 @@
                                 class="text-danger" 
                                 *ngIf="formularioInvalido && formularioContacto.get('nombre')?.errors?.['required']">
                                 Este campo es obligatorio
-                            </p> 
-                                            
+                            </p>                                             
                     </div>
                     <div class="row my-2">
                        
@@ -75,8 +72,7 @@
                                 class="text-danger" 
                                 *ngIf="formularioInvalido && formularioContacto.get('asunto')?.errors?.['required']">
                                 Este campo es obligatorio
-                            </p> 
-                                             
+                            </p>                                             
                     </div> 
                     <div class="row my-2">
                         
@@ -106,14 +102,12 @@
                                 class="text-danger" 
                                 *ngIf="formularioInvalido && formularioContacto.get('correo')?.errors?.['email']">
                                 El correo debe cumplir con el siguiente formato de ejemplo: mauricio@gmail.com
-                            </p>
-                     
+                            </p>                     
                     </div> 
                     <div class="row mt-2">
                    
                             <div class="col">                       
                                 <textarea
-                                    #mensajeForm 
                                     placeholder="Mensaje" 
                                     class="form-control my-1"  
                                     maxlength="200" 
@@ -125,19 +119,16 @@
                                 class="text-danger" 
                                 *ngIf="formularioInvalido && formularioContacto.get('mensaje')?.errors?.['required']">
                                 Este campo es obligatorio
-                            </p>
-                   
+                            </p>                   
                     </div>
                     <div class="row mt-4">
                         <div class="col">                       
-                            <button type="submit" class="btn btn-primary" >Enviar</button>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
                         </div>                        
-                    </div>
-                                         
+                    </div>                                         
                 </form>
             </div>
-            <div id="container-info">
-                
+            <div id="container-info">                
                 <div>                    
                     <label>Ubicación</label>                                       
                     <p>{{persona.ubicacion}}</p>
@@ -146,21 +137,54 @@
                     <label>Teléfono</label>                    
                     <p  >{{persona.telefono}}</p>                   
                 </div>
-                <div class="my-4">
+                <div style="margin-top: -2%">
                     <label>Correo</label>
                     <p  >{{persona.email}}</p>
                 </div>
             </div>
-
         </div>                  
     </div>
-
 </section>
 
 <app-contacto-modal
     (actualizarTitulo)="modificarTitulo($event)">
 </app-contacto-modal> 
 <app-contacto-modal-info
-    [persona]="persona"
     (enModificarPersona)="modificarPersona($event)"
 ></app-contacto-modal-info> 
+
+
+<!-- MODAL MAIL ENVIADO -->
+
+<div 
+class="modal fade modal"      
+id="contacto-modal-confirmacion" tabindex="-1" 
+aria-labelledby="textoModalLabel"
+aria-hidden="true"
+>
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div>
+                <div class="d-flex justify-content-center align-items-center">
+                    <fa-icon
+                        id="icono-confirmacion"
+                        [icon]="faCircleCheck">
+                    </fa-icon>
+                </div>
+                <p style="color:black; text-align: center; margin: 0px 25px;">El mail ha sido enviado correctamente, ¡en breve me pondré en contacto!</p>
+            </div>                    
+            <div class="modal-footer d-flex justify-content-center p-2">               
+                <button 
+                    type="button" 
+                    class="btn btn-primary"
+                    data-bs-dismiss="modal"
+                    >
+                    Aceptar
+                </button>
+            </div>        
+        </div>  
+    </div>
+</div>
+                
+
+
