--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -36,7 +36,7 @@
                         <a class="nav-link link" href="#contacto" >Contacto</a>
                     </li>
                     <li class="nav-item ms-2">
-                        <a class="nav-link" href="https://drive.google.com/file/d/1ydClG_5Vd0l7J2m0kDwPLylX8tpuMv9C/view" target="_blank"> 
+                        <a class="nav-link" href="https://drive.google.com/file/d/1djeNMv7v-KXWdcmLdvFT51G94AKmZaUM/view?usp=share_link" target="_blank"> 
                             <button id="boton_cv" >Currículum</button>
                         </a>
                     </li>                    
