--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -5,12 +5,12 @@
             <div>
                 <fa-icon
                     [icon]="faPlus" 
-                  
+                    *ngIf="modoEdicion"
                     data-bs-toggle="modal" 
                     data-bs-target="#experiencia-modal">
                 </fa-icon> 
                 <fa-icon
-                    
+                    *ngIf="modoEdicion"
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
                     data-bs-target="#experiencia-modal-titulo">
@@ -28,7 +28,8 @@
                     > 
                     {{experiencia.nombre_empresa}}                   
                     <fa-icon 
-                            [icon]="faX"   
+                            [icon]="faX" 
+                            *ngIf="modoEdicion" 
                             id="icono-borrar"
                             data-bs-toggle="modal" 
                             [attr.data-bs-target]="'#experiencia-modal-eliminar-' + experiencia.id">
@@ -36,7 +37,7 @@
                     <fa-icon 
                             id="icono-editar"
                             [icon]="faSquarePen" 
-                          
+                            *ngIf="modoEdicion"
                             data-bs-toggle="modal" 
                             [attr.data-bs-target]="'#experiencia-modal-editar-' + experiencia.id">
                     </fa-icon>                   
