--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
@@ -4,7 +4,6 @@
             <h3><strong>{{titulo.titulo}}</strong></h3>
             <div>
                 <fa-icon
-
                     [icon]="faPlus" 
                     *ngIf="modoEdicion" 
                     data-bs-toggle="modal" 
@@ -22,6 +21,7 @@
         <app-formacion-academica-item            
               *ngFor="let formacion of formaciones"
               [formacion]="formacion"
+              [modoEdicion]="modoEdicion"
               class="my-3 w-100"
               data-aos="fade-right" data-aos-duration="600" data-aos-easing="ease-in-out"                                                  
           >
