ajustes validaciones regulares

--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-modal-editar/proyectos-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-modal-editar/proyectos-modal-editar.component.html
@@ -116,7 +116,7 @@
                             <p 
                                 class="text-danger" 
                                 *ngIf="formularioInvalido && formularioProyecto.get('tecnologias')?.errors?.['pattern']">
-                                Las tecnologias deben ir en minúscula y separadas por una coma
+                                Las tecnologias deben ir en minúscula y separadas por un espacio, con un espacio al final
                             </p> 
                         </div>                      
                         <div class="mb-3">
