limite de tamaño subida de imagenes

--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-editar/formacion-academica-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-editar/formacion-academica-modal-editar.component.html
@@ -170,7 +170,12 @@ aria-hidden="true"
                             (change)="capturarImagen($event)" 
                             type="file" 
                             accept="image/*"
-                            (click)="ocultarMensajeError()">                            
+                            (click)="ocultarMensajeError()"> 
+                        <p 
+                            class="text-danger" 
+                            *ngIf="errorImagen">
+                            La imagen no puede pesar más de 3 MB
+                        </p>                           
                     </div>
                     <label class="textoModal">{{nombreArchivo}}</label> 
                     
