--- a/Proyecto-Angular/src/app/components/banner/banner-modal/banner-modal.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner-modal/banner-modal.component.html
@@ -26,7 +26,12 @@
                             type="file" 
                             accept="image/*"
                             (click)="ocultarMensajeError()"> 
-                        <label class="textoModal">{{nombreArchivoBanner}}</label>       
+                        <label class="textoModal">{{nombreArchivoBanner}}</label> 
+                        <p 
+                            class="text-danger" 
+                            *ngIf="errorImagenBanner">
+                            La imagen no puede pesar más de 3 MB
+                        </p>       
                     </div>                      
                     
                     <div class="mb-3 contenedorImagen">
@@ -42,7 +47,12 @@
                             type="file" 
                             accept="image/*"
                             (click)="ocultarMensajeError()">  
-                        <label *ngIf="previsualizacionImagenPerfil" class="textoModal mb-1">{{nombreArchivoPerfil}}</label>                      
+                        <label *ngIf="previsualizacionImagenPerfil" class="textoModal mb-1">{{nombreArchivoPerfil}}</label>
+                        <p 
+                            class="text-danger" 
+                            *ngIf="errorImagenPerfil">
+                            La imagen no puede pesar más de 3 MB
+                        </p>                      
                     </div>                    
                     
                     <div class="mb-3">
