--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-crear/conocimientos-modal-crear.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-crear/conocimientos-modal-crear.component.html
@@ -70,6 +70,11 @@ aria-hidden="true"
                             class="text-danger" 
                             *ngIf="formularioInvalido && formularioConocimientos.get('imagen')?.errors?.['required']">
                             Este campo es obligatorio
+                        </p>
+                        <p 
+                            class="text-danger" 
+                            *ngIf="errorImagen">
+                            La imagen no puede pesar más de 3 MB
                         </p>             
                     </div>                    
                     <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">                 
