--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-crear/formacion-academica-modal-crear.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-crear/formacion-academica-modal-crear.component.html
@@ -176,6 +176,11 @@ aria-hidden="true"
                             *ngIf="formularioInvalido && formularioFormacion.get('imagen')?.errors?.['required']">
                             Este campo es obligatorio
                         </p>
+                        <p 
+                            class="text-danger" 
+                            *ngIf="errorImagen">
+                            La imagen no puede pesar más de 3 MB
+                        </p>
                     </div>
                     <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
                     
