--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-modal-editar/proyectos-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-modal-editar/proyectos-modal-editar.component.html
@@ -131,7 +131,12 @@
                                 (change)="capturarImagen($event)" 
                                 type="file" 
                                 accept="image/*"
-                                (click)="ocultarMensajeError()">                            
+                                (click)="ocultarMensajeError()">
+                            <p 
+                                class="text-danger" 
+                                *ngIf="errorImagen">
+                                La imagen no puede pesar más de 3 MB
+                            </p>                            
                         </div>
                         <label class="textoModal">{{nombreArchivo}}</label>                 
                         
