--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
@@ -18,7 +18,7 @@
                             type="text" 
                             id="user" 
                             name="user" 
-                            placeholder="Usuario: admin" 
+                            placeholder="admin" 
                             maxlength="15"
                             formControlName="usuario"
                             (click)="ocultarMensajeError()"
@@ -36,7 +36,7 @@
                             id="password" 
                             name="password"
                             maxlength="20" 
-                            placeholder="Contraseña: ArgentinaPrograma"
+                            placeholder="ArgentinaPrograma"
                             formControlName="contraseña"
                             (click)="ocultarMensajeError()"
                             [ngClass]="{'is-invalid':(formularioInvalido && formularioLogin.get('contraseña')?.errors?.['required'])||usuarioIncorrecto}">
